@@ -9,6 +9,7 @@ two versions can be retrieved from Subversion.
 
 * It is possible to get session ID from API.
 * Added support for opening in user defined browser.
+* Now parses ~/.photo-upload and uses it as defaults.
 
 0.2
 === (2007-10-01)
